# gl

./: .gitignore  cmake_build_debug.bat  cmake_build_rel_with_deb_info.bat  cmake_build_release.bat  cmake_generate.bat
data/: ReadMe.txt  profile.csv
data/hdri/: beach_cloudy_bridge_1k.hdr
data/shaders/: compose.glsl  convolute_cubemap.glsl  environment.glsl  geometry.glsl  hdri_to_cubemap.glsl  integrate_brdf.glsl  light_direct.glsl  prefilter_convolute_cubemap.glsl  present.glsl  present_depth.glsl  skybox.glsl
data/shaders/uniform_blocks/: common.glsl  model.glsl
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/filesystem/: filesystem.cpp  filesystem.hpp
src/common/log/: log.cpp  log.hpp
src/common/math/: bezier.hpp  gfxm.hpp  intersection.hpp
src/common/platform/win32/: module.cpp  module.hpp
src/common/platform/win32/gl/: error.hpp  glextutil.cpp  glextutil.h
src/common/profiler/: profiler.cpp  profiler.hpp
src/common/string/: split.hpp
src/game/: CMakeLists.txt  framebuffer_desc.cpp  framebuffer_desc.hpp  main.cpp  sampler_set.cpp  sampler_set.hpp  shader_program.cpp  shader_program.hpp  uniform_buffers.hpp  vfmt.hpp
